fix tags overlaps in next line

--- a/components/common/styles/common.module.css
+++ b/components/common/styles/common.module.css
@@ -5,12 +5,15 @@
   color: rgb(43, 36, 36);
 }
 
+.tagsContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .tag {
-  /* background: rgb(246 211 211); */
   border-radius: 0.25em;
   padding: 0px 8px;
-  /* border: solid 1px #f3a4a4; */
   border: solid 0.1em rgb(219 108 108);
-  margin: 0 2px;
+  margin: 2px;
   padding-bottom: 1px;
 }
